feat(map): add map to show user geolocation

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -18,5 +18,6 @@
     "editUserStreetLabel": "Street",
     "editUserSuiteLabel": "Suite",
     "editUserCityLabel": "City",
-    "editUserZipcodeLabel": "Zipcode"
+    "editUserZipcodeLabel": "Zipcode",
+    "mapAppBarTitle": "Map"
 }
