feat(home): add connectivity to show a message when there is no internet

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -10,6 +10,7 @@
     "homeDeleteUserText": "Delete",
     "homeFailureText": "There was an error.",
     "homeAddUserTooltip": "Add user",
+    "homeNoConnectionText": "No internet. Try again later.",
     "editUserEditAppBarTitle": "Edit user",
     "editUserAddAppBarTitle": "New user",
     "editUserNameLabel": "Name",
