refactor: edit user form and validation

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -21,6 +21,8 @@
     "editUserSuiteLabel": "Suite",
     "editUserCityLabel": "City",
     "editUserZipcodeLabel": "Zipcode",
+    "editUserEditFloatingActionButtonTooltip": "Save changes",
+    "editUserAddFloatingActionButtonTooltip": "Save new user",
     "mapAppBarTitle": "Map",
     "mapCallTooltip": "Call"
 }
