--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -21,6 +21,8 @@
     "editUserSuiteLabel": "Suite",
     "editUserCityLabel": "Ciudad",
     "editUserZipcodeLabel": "Código postal",
+    "editUserEditFloatingActionButtonTooltip": "Guardar cambios",
+    "editUserAddFloatingActionButtonTooltip": "Guardar nuevo usuario",
     "mapAppBarTitle": "Mapa",
     "mapCallTooltip": "Llamar"
 }
