refactor: add validation messages when inputs are invalid

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -14,13 +14,21 @@
     "editUserEditAppBarTitle": "Edit user",
     "editUserAddAppBarTitle": "New user",
     "editUserNameLabel": "Name",
+    "editUserInvalidNameText": "Invalid name",
     "editUserUsernameLabel": "Username",
+    "editUserInvalidUsernameText": "Invalid username",
     "editUserEmailLabel": "Email",
+    "editUserInvalidEmailText": "Invalid email",
     "editUserPhoneLabel": "Phone",
+    "editUserInvalidPhoneText": "Invalid phone",
     "editUserStreetLabel": "Street",
+    "editUserInvalidStreetText": "Invalid street",
     "editUserSuiteLabel": "Suite",
+    "editUserInvalidSuiteText": "Invalid suite",
     "editUserCityLabel": "City",
+    "editUserInvalidCityText": "Invalid city",
     "editUserZipcodeLabel": "Zipcode",
+    "editUserInvalidZipcodeText": "Invalid Zipcode",
     "editUserEditFloatingActionButtonTooltip": "Save changes",
     "editUserAddFloatingActionButtonTooltip": "Save new user",
     "mapAppBarTitle": "Map",
