--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -14,13 +14,21 @@
     "editUserEditAppBarTitle": "Editar usuario",
     "editUserAddAppBarTitle": "Nuevo usuario",
     "editUserNameLabel": "Nombre",
+    "editUserInvalidNameText": "Nombre invalido",
     "editUserUsernameLabel": "Nombre de usuario",
+    "editUserInvalidUsernameText": "Nombre de usuario invalido",
     "editUserEmailLabel": "Correo electrónico",
+    "editUserInvalidEmailText": "Correo electrónico invalido",
     "editUserPhoneLabel": "Teléfono",
+    "editUserInvalidPhoneText": "Teléfono invalido",
     "editUserStreetLabel": "Calle",
+    "editUserInvalidStreetText": "Calle invalida",
     "editUserSuiteLabel": "Suite",
+    "editUserInvalidSuiteText": "Suite invalida",
     "editUserCityLabel": "Ciudad",
+    "editUserInvalidCityText": "Ciudad invalida",
     "editUserZipcodeLabel": "Código postal",
+    "editUserInvalidZipcodeText": "Código postal invalido",
     "editUserEditFloatingActionButtonTooltip": "Guardar cambios",
     "editUserAddFloatingActionButtonTooltip": "Guardar nuevo usuario",
     "mapAppBarTitle": "Mapa",
